--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Hub</title>
+
+    <meta name="google-site-verification" content="acSd-l1UrnxYXavkvR2rt_wiCL0ej3dwC-NgserK1rQ" />
   </head>
   <body>
     <div id="root"></div>
